--- a/progressly/package.json
+++ b/progressly/package.json
@@ -32,7 +32,7 @@
     "dexie": "^4.2.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.540.0",
-    "next": "^15.5.0",
+    "next": "15.5.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.64.0",
